Adjust left margin of widgets to ensure all page elements are left-aligned

--- a/app/assets/stylesheets/sul_theme.css.scss
+++ b/app/assets/stylesheets/sul_theme.css.scss
@@ -392,6 +392,9 @@ footer {
 
 // Curator Mode - Widgets //
 .content-block {
+  &.row {
+    margin-left: 0;
+  }
   margin-bottom: 10px;
   margin-top: 10px;
   img {
